--- a/index.html
+++ b/index.html
@@ -832,14 +832,14 @@
                     </div>
                     <div class="service-wrap">
                         <div class="service-box">
-                            <a href="" class="service-logo"><img src="/asset/images/whale.png" alt="" width="48" height="48"></a>
+                            <a href="" class="service-logo"><img src="./asset/images/whale.png" alt="" width="48" height="48"></a>
                             <div class="service-info">
                                 <strong class="title">웨일 브라우저</strong>
                                 <a href="" class="dsc">다운받기</a>
                             </div>
                         </div>
                         <div class="service-box">
-                            <a href="" class="service-logo"><img src="/asset/images/logoflower.png" alt="" width="47" height="50"></a>
+                            <a href="" class="service-logo"><img src="./asset/images/logoflower.png" alt="" width="47" height="50"></a>
                             <div class="service-info">
                                 <strong class="title">프로젝트 꽃</strong>
                                 <a href="" class="dsc">바로가기</a>
