--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" size="24x24" href="./asset/images/naver.ico">
+    <link rel="shortcut icon" type="image/x-icon" size="24x24" href="https://www.naver.com/favicon.ico?1">
     <link rel="stylesheet" href="./asset/css/layout.css">
     <link rel="stylesheet" href="./asset/css/main.css">
     <title>naver</title>
